--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Testing</h1>
+    <header></header>
+    <main id="maincontent" tabindex="0"></main>
+    <footer></footer>
 </body>
 </html>
