--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ProVid</title>
 </head>
 <body>
-    <h1>Testing</h1>
+    <header class="app-bar">
+        <a href="#main-content" class="skip-link">Menuju ke konten</a>
+        <!-- Desktop Navbar -->
+        <nav class="nav">
+            <a class="logo" href="">ProVid</a>
+            <ul class="navList">
+                <li class="navItem"><a href="">Home</a></li>
+                <li class="navItem"><a href="">Zona</a></li>
+                <li class="navItem"><a href="">Rumah Sakit</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main id="main-content"></main>
+    <footer>
+        <p>Copyright © 2021</p>
+    </footer>
 </body>
 </html>
