--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,44 +14,76 @@ body {
 /*
   Navigation
 */
+header {
+    min-height: 56px;
+    transition: min-height 0.3s;
+    padding: 16px;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+}
+
+header-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.header-inner {
+    display: flex;
+    align-items: center;
+}
+
+.header_title {
+    font-weight: 300;
+    font-size: 2em;
+    margin: 0.5em 0.25em;
+    display: inline-block;
+    color: black;
+}
+
+.hamburger-container {
+    margin: 10px 0 10px 5px;
+    display: block;
+    width: auto;
+    text-align: end;
+}
+
+.header_menu {
+    min-width: 44px;
+    min-height: 44px;
+    font-size: 25px;
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    border: 0;
+}
+
 .nav {
-	background-color: #63a5bf;
-	width: 100%;
 	display: flex;
-	font-weight: 600;
-	font-size: 14px;
-	text-transform: uppercase
+	justify-content: flex-end;
 }
-.navList {
-	width: 80%;
-	padding: 0;
-	margin: 0;
-	text-align: right
+
+.nav-list {
+    padding: 0;
+    margin: 0;
 }
-.logo {
-	width: 20%;
-	padding: 0;
-	margin: 0;
-	text-align: left;
-	box-sizing: border-box;
-	display: inline-block;
-	line-height: 24px
+
+.nav_item {
+    display: inline-block;
+    text-align: center;
+    line-height: 24px;
+    text-transform: uppercase;
 }
-.navItem {
-	box-sizing: border-box;
-	display: inline-block;
-	text-align: right;
-	line-height: 24px;
-	text-transform: uppercase
-}
+
 .nav a {
-	display: inline-block;
-	padding: 1.3em;
-	text-decoration: none;
-	color: white !important
+    display: inline-block;
+    padding: 1.3em;
+    text-decoration: none;
+    color: black;
 }
+
 .nav a:hover {
-	text-decoration: underline
+    text-decoration: underline;
+    color: black;
 }
    
 /*
@@ -81,19 +113,18 @@ footer p {
 }
 
 /*
- * Skip Link
+  Skip Link
 */
 .skip-link {
-	position: absolute;
-	top: -100px;
-	left: 0;
-	background-color: #bf1722;
-	color: white;
-	padding: 10px;
-	font-size: 20px;
-	z-index: 100;
-	text-decoration: none
-}
-.skip-link:focus {
-	top: 100px
-}
+    position: absolute;
+    top: -40px;
+    left: 0;
+    background-color: #bf1722;
+    color: white;
+    padding: 8px;
+    z-index: 100;
+ }
+
+ .skip-link:focus {
+    top: 0;
+ }
