--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,18 +7,11 @@
     <title>ProVid</title>
 </head>
 <body>
-    <header class="app-bar">
-        <a href="#main-content" class="skip-link">Menuju ke konten</a>
-        <nav class="nav">
-            <a class="logo" href="">ProVid</a>
-            <ul class="navList">
-                <li class="navItem"><a href="">Home</a></li>
-                <li class="navItem"><a href="">Zona</a></li>
-                <li class="navItem"><a href="">Rumah Sakit</a></li>
-            </ul>
-        </nav>
+    <a href="#mainContent" class="skip-link">Menuju Ke Konten</a>
+    <header>
+        <header-container></header-container>
     </header>
-    <main id="main-content"></main>
+    <main id="mainContent" tabindex="0"></main>
     <footer>
         <p>Copyright © 2021</p>
     </footer>
