--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -1,4 +1,11 @@
-@media screen and (max-width: 550px) {
+.posts {
+    display: grid;
+    grid-column-gap: 32px;
+    grid-row-gap: 16px;
+    width: 100%;
+}
+
+@media screen and (max-width: 499px) {
     .header_title {
         font-weight: 100;
         font-size: 1.5em;
@@ -41,7 +48,7 @@
     }
 }
 
-@media screen and (min-width: 551px) {
+@media screen and (min-width: 500px) {
     .header_menu {
         display: none;
     }
@@ -54,5 +61,35 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
+    }
+}
+
+@media screen and (min-width: 700px) {
+    .posts {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 32px;
+        grid-row-gap: 16px;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .nav__list {
+        max-width: 800px;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (min-width: 900px) {
+
+    .posts {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    main {
+        max-width: 1200px;
     }
 }
