--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -107,26 +107,28 @@ main {
 }
 
 /*
- * latest
+ * vaksin
  */
 
- .latest {
+ .vaksin {
     width: 100%;
     text-align: center;
 }
 
-.latest__label {
+.vaksin__label {
     font-size: 20px;
     font-weight: 400;
     text-align: left;
+    margin-bottom: 10px;
 }
 
-.latest__label::after {
+.vaksin__label::after {
     display: block;
     border-bottom: 1px solid #eeeeee;
 }
 
 .update {
+    margin-top: 10px;
     font-weight: lighter;
     text-align: right;
 }
@@ -136,30 +138,26 @@ main {
  */
 
 .posts {
-    margin: 64px;
     text-align: left;
-    width: auto;
 }
 
 /*
  * post item
  */
 
-.post-item {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    overflow: hidden;
-    width: 100%;
-}
-
-.post-item__content {
-    padding: 32px;
-}
-
 .post-item-vaksin {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     border-radius: 5px;
-    width: 100%;
+    overflow: hidden;
+}
+
+.post-item-contentVaksin {
+    padding: 32px;
+}
+
+.post-item-sasaran {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
     overflow: hidden;
     padding: 16px;
     grid-column-start: 1; /* box2 akan dimulai dari kolom garis ketiga */
@@ -167,10 +165,33 @@ main {
     grid-row-end: 3; /* kemudian berakhir di baris garis ketiga */
 }
 
-.post-item__title {
+.post-item__titleSasaran {
     font-size: 15px;
     text-transform: uppercase;
     color: #999;
+    text-align: center;
+}
+
+.post-item-totalVaksin {
+    font-size: 15px;
+    text-transform: uppercase;
+    color: #999;
+    text-align: right;
+}
+
+.post-item-titleVaksin {
+    font-size: 15px;
+    text-transform: uppercase;
+    color: #999;
+    text-align: right;
+}
+
+.map{
+    width: 100%;
+}
+
+.vaksinIcon{
+    width: 20%;
 }
   
 /*
