--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -5,6 +5,13 @@
     width: 100%;
 }
 
+.virus {
+    display: grid;
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+    width: 100%;
+}
+
 @media screen and (max-width: 499px) {
     .header_title {
         font-weight: 100;
@@ -71,6 +78,13 @@
         grid-column-gap: 32px;
         grid-row-gap: 16px;
     }
+
+    .virus {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 26px;
+        grid-row-gap: 16px;
+    }
 }
 
 @media screen and (min-width: 800px) {
@@ -83,6 +97,11 @@
 @media screen and (min-width: 900px) {
 
     .posts {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .virus {
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
