--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -299,6 +299,7 @@ footer p {
     height: 775px;
     border-radius: 5px;
 }
+
 /*
   Map Info
 */
@@ -314,14 +315,15 @@ footer p {
     margin: 0 0 5px;
     color: #777;
 }
+
 /*
-  Legend Info
+  Indicator Info
 */
-.legend {
+.indicator {
     line-height: 18px;
     color: #555;
 }
-.legend i {
+.indicator i {
     width: 18px;
     height: 18px;
     float: left;
