--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -403,6 +403,7 @@ footer p {
     margin-right: 8px;
     opacity: 0.7;
 }
+
 /*
   Search Hospital
 */
@@ -431,4 +432,19 @@ footer p {
 }
 .button:active {
     background:#a7acac;
+}
+
+/*
+  Other CSS
+*/
+.risk-content {
+    text-align: justify;
+}
+.risk-container {
+    margin-top: 5px;
+    overflow-y: auto;
+    height: 200px;
+}
+::-webkit-scrollbar {
+    width: 5px;
 }
