--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -107,7 +107,7 @@ main {
 }
 
 /*
- * post
+  post
  */
 
  .posts {
@@ -115,7 +115,7 @@ main {
 }
 
 /*
- * vaksin
+  vaksin
  */
 
  .vaksin {
@@ -215,7 +215,7 @@ main {
 }
 
 /*
- * Protect
+  Protect
  */
 
  .protection {
@@ -276,7 +276,7 @@ main {
 }
 
 /*
- * Varian
+  Varian
  */
 
  .varian {
@@ -318,7 +318,7 @@ main {
 
 
 /*
- * virus
+  virus
  */
 
 .virus {
