--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -123,7 +123,22 @@
     }
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (max-width: 770px) {
+    .vaksinInfo > h2 {
+        font-weight: 500;
+        font-size: 16px;
+        color: rgb(80, 78, 78);
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .nav__list {
+        max-width: 800px;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (min-width: 1000px) {
     .posts {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -139,14 +154,7 @@
     }
 }
 
-@media screen and (min-width: 800px) {
-    .nav__list {
-        max-width: 800px;
-        margin: 0 auto;
-    }
-}
-
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1200px) {
 
     .posts {
         display: grid;
