--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -57,37 +57,19 @@
         Search Hospital
     */
     .form-hospital{
-        border: 1px solid #c1c1c1;
-        max-width: 100%;
-        padding: 10px;
-        margin: auto;
-        display: flex;
         flex-direction: column;
     }
-    .select{
-        width: 100%;
-        height: 20px;
+    .select{        
         border-radius: 5px;
         align-items: center;
         font-size: small;
     }
-    .label-prov{
-        color: rgb(80, 78, 78);
-        font-size: small;
-    }
-    .label-city{
-        color: rgb(80, 78, 78);
+    .label{
         font-size: small;
     }
     .btn-search {
         position:relative;
         width: 100%;
-        height: 25px;
-        border-radius: 5px;
-        border:0px solid #a7acac;
-        background-color: #a7acac; 
-        color:#fafafa;
-        font-weight:bold;
         margin: auto;
     }
     .btn-search:hover {
