--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -21,7 +21,7 @@
     .nav {
         margin-top: 80px;
         z-index: 10000;
-        background-color: #fff;
+        background-color: #05a3ff;
         width: 300px;
         position: absolute;
         left: 0;
@@ -50,7 +50,7 @@
     }
 
     .nav_item a {
-        color: black;
+        color: white;
         text-decoration: none;
     }
     /*
@@ -63,6 +63,7 @@
         margin: auto;
         display: flex;
         flex-direction: column;
+        margin-bottom: 10px;
     }
     .select{
         width: 100%;
@@ -123,14 +124,6 @@
     }
 }
 
-@media screen and (max-width: 770px) {
-    .vaksinInfo > h2 {
-        font-weight: 500;
-        font-size: 16px;
-        color: rgb(80, 78, 78);
-    }
-}
-
 @media screen and (min-width: 800px) {
     .nav__list {
         max-width: 800px;
@@ -138,7 +131,7 @@
     }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 700px) {
     .posts {
         display: grid;
         grid-template-columns: 1fr 1fr;
