--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -25,7 +25,7 @@ header {
     min-height: 56px;
     transition: min-height 0.3s;
     padding: 16px;
-    background-color: #05a3ff;
+    background-color: white;
     box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
 }
 
@@ -44,7 +44,7 @@ header-container {
     font-size: x-large;
     margin: 0.5em 0.25em;
     display: inline-block;
-    color: white;
+    color: black;
 }
 
 .hamburger-container {
@@ -59,8 +59,8 @@ header-container {
     min-height: 44px;
     font-size: 25px;
     text-decoration: none;
-    color: white;
-    background-color: #05a3ff;
+    color: black;
+    background-color: white;
     border: 0;
 }
 
@@ -80,7 +80,7 @@ header-container {
     display: inline-block;
     padding: 1.3em;
     text-decoration: none;
-    color: white;
+    color: black;
 }
 
 .nav a:hover {
@@ -123,7 +123,6 @@ main {
     font-weight: 500;
     text-align: left;
     margin-bottom: 10px;
-    color: rgb(92, 188, 233);
 }
 
 .vaksin__label::after {
@@ -149,13 +148,11 @@ main {
     color: rgb(80, 78, 78);
     text-align: center;
     padding-bottom: 10px;
-    margin: auto;
 }
 
 .post-item__titleSasaran {
     color: rgb(170, 169, 169);
     text-align: center;
-    margin: auto;
 }
 
 .post-item-vaksin {
@@ -185,9 +182,6 @@ main {
 .vaksinInfo > h2 {
     font-weight: 500;
     color: rgb(80, 78, 78);
-    background: rgb(155, 150, 150);
-    border-radius: 4px;
-    width: 100%;
 }
   
 .vaksinInfo > p {
@@ -206,7 +200,7 @@ main {
     color: rgb(170, 169, 169);
     font-weight: 400;
     text-align: right;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
     border-bottom: rgb(170, 169, 169);;
 }
 
@@ -224,7 +218,6 @@ main {
     font-size: large;
     font-weight: 500;
     text-align: left;
-    color: rgb(92, 188, 233);
 }
 
 .protection__label::after {
@@ -254,8 +247,8 @@ main {
     padding: 16px;
 }
   
-.protectionInfo> h2 {
-    font-weight: 500;
+.protectionInfo> h4 {
+    font-weight: 600;
     color: rgb(80, 78, 78);
 }
   
@@ -286,7 +279,6 @@ main {
     font-weight: 500;
     text-align: left;
     margin-bottom: 10px;
-    color: rgb(92, 188, 233);
 }
 
 .varian_label::after {
@@ -318,11 +310,12 @@ main {
  */
 .virus {
     text-align: left;
+    padding: 10px
 }
 .post-item-virus {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2);
     border-radius: 10px;
-    overflow: hidden;;
 }
 
 /*
@@ -330,7 +323,7 @@ main {
 */ 
 footer {
     position: absolute;
-    background-color: #05a3ff;
+    background-color: #aaa;
     padding: 16px;
     width: 100%;
     text-align: center;
@@ -339,7 +332,7 @@ footer {
 }
 footer p {
     text-align: center;
-    color: white;
+    color: black;
     font-size: 16px;
 }
 
@@ -402,53 +395,60 @@ footer p {
   Search Hospital
 */
 .form-hospital{
-    border: 1px solid #c1c1c1;
+    border: 1px solid #05a3ff;
     width: 100%;
     padding: 10px;
     margin: auto;
     display: flex;
     flex-direction: row;
-    margin-bottom: 10px;
 }
+
+.select-box {
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+}
+
 .select{
-    width: 50%;
-    height: 20px;
+    width: 100%;
+    border: 2px solid #05a3ff;
     border-radius: 5px;
-    align-items: center;
-}
-.label-prov{
-    color: rgb(131, 128, 128);
     font-size: medium;
-    margin-right: 2px;
+    padding: 10px;
+    margin-bottom: 8px;
+    align-items: center;
+    box-sizing: border-box;
 }
-.label-city{
-    color: rgb(131, 128, 128);
+
+.label{
+    color: #05a3ff;
     font-size: medium;
     margin-right: 2px;
 }
 
+.btn-box {
+    width: 35%;
+    margin: 5px;
+}
+
 .btn-search {
-    margin-left: 20px;
-    height: 20px;
-    width: 100px;
+    width: 100%;
     border-radius: 5px;
-    border:0px solid #a7acac;
-    background-color: #a7acac; 
     color:#fafafa;
-    font-weight:bold;
+    font-size: medium;
+    padding: 10px 12px;
+    border: 2px solid #05a3ff;
+    color: black;
+    margin-top: 25px;
+    cursor: pointer;
 }
 .btn-search:hover {
-    background: #05a3ff;          
+    background: #68a8a8;          
     color:#fafafa;
 }
 .btn-search:active {
     background:#a7acac;
-}
-.prov-container{
-    width: 50%;
-}
-.city-container{
-    width: 50%;
 }
 
 /*
