--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -1,4 +1,4 @@
-.posts {
+posts {
     display: grid;
     grid-column-gap: 32px;
     grid-row-gap: 16px;
@@ -21,7 +21,7 @@
     .nav {
         margin-top: 80px;
         z-index: 10000;
-        background-color: #05a3ff;
+        background-color: #fff;
         width: 300px;
         position: absolute;
         left: 0;
@@ -50,45 +50,26 @@
     }
 
     .nav_item a {
-        color: white;
+        color: black;
         text-decoration: none;
     }
     /*
         Search Hospital
     */
     .form-hospital{
-        border: 1px solid #c1c1c1;
-        max-width: 100%;
-        padding: 10px;
-        margin: auto;
-        display: flex;
         flex-direction: column;
-        margin-bottom: 10px;
     }
-    .select{
-        width: 100%;
-        height: 20px;
+    .select{        
         border-radius: 5px;
         align-items: center;
         font-size: small;
     }
-    .label-prov{
-        color: rgb(80, 78, 78);
-        font-size: small;
-    }
-    .label-city{
-        color: rgb(80, 78, 78);
+    .label{
         font-size: small;
     }
     .btn-search {
         position:relative;
         width: 100%;
-        height: 25px;
-        border-radius: 5px;
-        border:0px solid #a7acac;
-        background-color: #a7acac; 
-        color:#fafafa;
-        font-weight:bold;
         margin: auto;
     }
     .btn-search:hover {
@@ -124,6 +105,14 @@
     }
 }
 
+@media screen and (max-width: 770px) {
+    .vaksinInfo > h2 {
+        font-weight: 500;
+        font-size: 16px;
+        color: rgb(80, 78, 78);
+    }
+}
+
 @media screen and (min-width: 800px) {
     .nav__list {
         max-width: 800px;
@@ -131,7 +120,7 @@
     }
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 1000px) {
     .posts {
         display: grid;
         grid-template-columns: 1fr 1fr;
