--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -25,7 +25,7 @@ header {
     min-height: 56px;
     transition: min-height 0.3s;
     padding: 16px;
-    background-color: white;
+    background-color: #05a3ff;
     box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
 }
 
@@ -44,7 +44,7 @@ header-container {
     font-size: x-large;
     margin: 0.5em 0.25em;
     display: inline-block;
-    color: black;
+    color: white;
 }
 
 .hamburger-container {
@@ -59,8 +59,8 @@ header-container {
     min-height: 44px;
     font-size: 25px;
     text-decoration: none;
-    color: black;
-    background-color: white;
+    color: white;
+    background-color: #05a3ff;
     border: 0;
 }
 
@@ -80,12 +80,12 @@ header-container {
     display: inline-block;
     padding: 1.3em;
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 .nav a:hover {
     text-decoration: underline;
-    color: rgb(153, 147, 147);
+    color: rgb(92, 188, 233);
 }
    
 /*
@@ -148,11 +148,13 @@ main {
     color: rgb(80, 78, 78);
     text-align: center;
     padding-bottom: 10px;
+    margin: auto;
 }
 
 .post-item__titleSasaran {
     color: rgb(170, 169, 169);
     text-align: center;
+    margin: auto;
 }
 
 .post-item-vaksin {
@@ -182,6 +184,9 @@ main {
 .vaksinInfo > h2 {
     font-weight: 500;
     color: rgb(80, 78, 78);
+    background: rgb(155, 150, 150);
+    border-radius: 4px;
+    width: 100%;
 }
   
 .vaksinInfo > p {
@@ -200,7 +205,7 @@ main {
     color: rgb(170, 169, 169);
     font-weight: 400;
     text-align: right;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
     border-bottom: rgb(170, 169, 169);;
 }
 
@@ -218,6 +223,7 @@ main {
     font-size: large;
     font-weight: 500;
     text-align: left;
+    color: rgb(92, 188, 233);
 }
 
 .protection__label::after {
@@ -248,7 +254,7 @@ main {
 }
   
 .protectionInfo> h4 {
-    font-weight: 600;
+    font-weight: 500;
     color: rgb(80, 78, 78);
 }
   
@@ -279,6 +285,7 @@ main {
     font-weight: 500;
     text-align: left;
     margin-bottom: 10px;
+    color: rgb(92, 188, 233);
 }
 
 .varian_label::after {
@@ -314,8 +321,9 @@ main {
 }
 .post-item-virus {
     overflow: hidden;
-    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     border-radius: 10px;
+    overflow: hidden;
 }
 
 /*
@@ -323,7 +331,7 @@ main {
 */ 
 footer {
     position: absolute;
-    background-color: #aaa;
+    background-color: #05a3ff;
     padding: 16px;
     width: 100%;
     text-align: center;
@@ -332,7 +340,7 @@ footer {
 }
 footer p {
     text-align: center;
-    color: black;
+    color: white;
     font-size: 16px;
 }
 
@@ -398,7 +406,8 @@ footer p {
     border: 1px solid #05a3ff;
     width: 100%;
     padding: 10px;
-    margin: auto;
+    margin-bottom: 5px;
+    border-radius: 5px;
     display: flex;
     flex-direction: row;
 }
@@ -416,7 +425,6 @@ footer p {
     border-radius: 5px;
     font-size: medium;
     padding: 10px;
-    margin-bottom: 8px;
     align-items: center;
     box-sizing: border-box;
 }
@@ -440,7 +448,7 @@ footer p {
     padding: 10px 12px;
     border: 2px solid #05a3ff;
     color: black;
-    margin-top: 25px;
+    margin-top: 20px;
     cursor: pointer;
 }
 .btn-search:hover {
