--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <meta name="theme-color" content="#db0000"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+    <meta name="dicoding:email" content="ari.comunity1@gmail.com">
+    <meta name="theme-color" content="#05a3ff"/>
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
     <link rel="icon" href="covid.png">
     <link rel="manifest" href="manifest.json">
