--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -1,4 +1,4 @@
-posts {
+.posts {
     display: grid;
     grid-column-gap: 32px;
     grid-row-gap: 16px;
@@ -21,7 +21,7 @@ posts {
     .nav {
         margin-top: 80px;
         z-index: 10000;
-        background-color: #fff;
+        background-color: #05a3ff;
         width: 300px;
         position: absolute;
         left: 0;
@@ -50,7 +50,7 @@ posts {
     }
 
     .nav_item a {
-        color: black;
+        color: white;
         text-decoration: none;
     }
     /*
@@ -105,26 +105,11 @@ posts {
     }
 }
 
-@media screen and (max-width: 770px) {
-    .vaksinInfo > h2 {
-        font-weight: 500;
-        font-size: 16px;
-        color: rgb(80, 78, 78);
-    }
-}
-
-@media screen and (min-width: 800px) {
-    .nav__list {
-        max-width: 800px;
-        margin: 0 auto;
-    }
-}
-
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 600px) {
     .posts {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-column-gap: 32px;
+        grid-column-gap: 26px;
         grid-row-gap: 16px;
     }
 
@@ -133,6 +118,13 @@ posts {
         grid-template-columns: 1fr 1fr;
         grid-column-gap: 26px;
         grid-row-gap: 16px;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .nav__list {
+        max-width: 800px;
+        margin: 0 auto;
     }
 }
 
