--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -118,19 +118,6 @@ main {
     text-align: center;
 }
 
-.vaksin__label {
-    font-size: large;
-    font-weight: 500;
-    text-align: left;
-    margin-bottom: 10px;
-    color: rgb(92, 188, 233);
-}
-
-.vaksin__label::after {
-    display: block;
-    border-bottom: 1px solid #eeeeee;
-}
-
 .post-item-sasaran {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     border-radius: 5px;
@@ -233,18 +220,6 @@ main {
     padding: 10px
 }
 
-.protection__label {
-    font-size: large;
-    font-weight: 500;
-    text-align: left;
-    color: rgb(92, 188, 233);
-}
-
-.protection__label::after {
-    display: block;
-    border-bottom: 1px solid #eeeeee;
-}
-
 .post-item-contentProtect {
     padding: 16px;
     height: auto;
@@ -256,10 +231,8 @@ main {
 
 .protectIcon{
     width: 50px;
-    height: 50px;
     margin-top: 30px;
     align-items: center;
-    object-fit: cover;
     object-position: center;
 }
 
@@ -292,19 +265,6 @@ main {
     width: 100%;
     text-align: center;
     padding: 10px
-}
-
-.varian__label {
-    font-size: large;
-    font-weight: 500;
-    text-align: left;
-    margin-bottom: 10px;
-    color: rgb(92, 188, 233);
-}
-
-.varian_label::after {
-    display: block;
-    border-bottom: 1px solid #eeeeee;
 }
 
 .post-item-contentvarian {
@@ -385,15 +345,14 @@ main {
 .credit {
     width: 100%;
     margin: 60px auto;
-    text-align: center;
 }
 
-.credit__label {
+.__label {
     font-size: 32px;
     font-weight: lighter;
 }
 
-.credit__label::after {
+.__label::after {
     content: '';
     margin-top: 16px;
     display: block;
