--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -18,46 +18,6 @@
 }
 
 @media screen and (max-width: 499px) {
-    .header_title {
-        font-weight: 100;
-        font-size: 1.5em;
-    }
-
-    .nav {
-        margin-top: 80px;
-        z-index: 10000;
-        background-color: #05a3ff;
-        width: 300px;
-        position: absolute;
-        left: 0;
-
-        /* This trasform moves the drawer off canvas. */
-        -webkit-transform: translate(-320px, 0);
-        transform: translate(-320px, 0);
-        visibility: hidden;
-
-        /* Optionally, we animate the drawer. */
-        transition: transform 0.3s ease;
-    }
-
-    .open {
-        -webkit-transform: translate(0, 0);
-        transform: translate(0, 0);
-        visibility: visible;
-    }
-
-    .nav_item {
-        display: list-item;
-        list-style-type: none;
-        border-bottom: 1px solid #E0E0E0;
-        width: 100%;
-        text-align: left;
-    }
-
-    .nav_item a {
-        color: white;
-        text-decoration: none;
-    }
     /*
         Search Hospital
     */
@@ -124,9 +84,49 @@
     }
 }
 
-<<<<<<< HEAD
-@media screen and (min-width: 600px) {
-=======
+@media screen and (max-width: 540px) {
+    .header_title {
+        font-weight: 100;
+        font-size: 1.5em;
+    }
+
+    .nav {
+        margin-top: 80px;
+        z-index: 10000;
+        background-color: #05a3ff;
+        width: 300px;
+        position: absolute;
+        left: 0;
+
+        /* This trasform moves the drawer off canvas. */
+        -webkit-transform: translate(-320px, 0);
+        transform: translate(-320px, 0);
+        visibility: hidden;
+
+        /* Optionally, we animate the drawer. */
+        transition: transform 0.3s ease;
+    }
+
+    .open {
+        -webkit-transform: translate(0, 0);
+        transform: translate(0, 0);
+        visibility: visible;
+    }
+
+    .nav_item {
+        display: list-item;
+        list-style-type: none;
+        border-bottom: 1px solid #E0E0E0;
+        width: 100%;
+        text-align: left;
+    }
+
+    .nav_item a {
+        color: white;
+        text-decoration: none;
+    }
+}
+
 @media screen and (max-width: 770px) {
     .vaksinInfo > h2 {
         font-weight: 500;
@@ -182,7 +182,6 @@
 }
 
 @media screen and (min-width: 1000px) {
->>>>>>> 08628da9096b9a61ef55850e3f4bca01455732de
     .posts {
         display: grid;
         grid-template-columns: 1fr 1fr;
